--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
             name="description"
             content="Web site created using create-react-app"
         />
+
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +26,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <title>Rep Comfy Sloth Starter</title>
+        <!-- <meta
+            http-equiv="Content-Security-Policy"
+            content="script-src 'self'"
+        /> -->
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="script-src 'self' 'unsafe-inline' https://js.stripe.com http://localhost:8888; script-src-elem 'unsafe-inline' https://js.stripe.com http://localhost:8888"
+        />
+
+        <!-- <meta id="csp" http-equiv="Content-Security-Policy" content="" /> -->
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
