--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,13 @@
             http-equiv="Content-Security-Policy"
             content="script-src 'self'"
         /> -->
-        <meta
+        <!-- <meta
             http-equiv="Content-Security-Policy"
             content="script-src 'self' 'unsafe-inline' https://js.stripe.com http://localhost:8888; script-src-elem 'unsafe-inline' https://js.stripe.com http://localhost:8888"
+        /> -->
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="script-src 'self' https://main--myecomercer.netlify.app/static/js/main.8bf14d97.js https://js.stripe.com http://localhost:8888"
         />
 
         <!-- <meta id="csp" http-equiv="Content-Security-Policy" content="" /> -->
